--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,59 +12,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.authentification.LoginActivity">
-
-        <LinearLayout
+        <fragment
+            android:id="@+id/nav2_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="bottom"
-                android:orientation="vertical">
-                <!--                    android:text="@={viewModel.loginClient}"-->
-                <EditText
-                    android:id="@+id/idLogin"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="@string/strLogin"
-
-                    android:inputType="textPersonName"
-                    android:autofillHints=""/>
-<!--                android:text="@={viewModel.pswClient}"-->
-                <EditText
-                    android:id="@+id/idPSW"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-
-                    android:hint="@string/strPassword"
-                    android:inputType="textPassword" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center|top"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/btnLogin"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/strBtnLogin" />
-
-                <Button
-                    android:id="@+id/btnInscription"
-                    android:layout_width="200dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/strBtnInscription" />
-            </LinearLayout>
-        </LinearLayout>
+            app:defaultNavHost="true"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navGraph="@navigation/mobile_navigation"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
