--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,17 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+
+    <!--    Dashboard dimensions-->
+    <dimen name="dashboard_card_content_top_margin">@dimen/_20sdp</dimen>
+    <dimen name="dashboard_card_divider_top_margin">@dimen/_10sdp</dimen>
+    <dimen name="dashboard_card_divider_start_margin">@dimen/_3sdp</dimen>
+    <dimen name="dashboard_card_divider_width">@dimen/_1sdp</dimen>
+    <dimen name="dashboard_card_title_start_margin">@dimen/_5sdp</dimen>
+    <dimen name="dashboard_card_title_size">@dimen/_14ssp</dimen>
+    <dimen name="dashboard_card_subtitle_size">@dimen/_10ssp</dimen>
+    <dimen name="dashboard_card_height">@dimen/_80sdp</dimen>
+    <dimen name="dashboard_card_width">@dimen/_125sdp</dimen>
+    <dimen name="dashboard_card_icon_size">@dimen/_32sdp</dimen>
 </resources>
