--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -47,6 +47,9 @@
         <action
             android:id="@+id/action_nav_mesCommandes_to_loginFragment"
             app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_mesCommandesFragment_to_catalogueFragment"
+            app:destination="@id/catalogueFragment" />
     </fragment>
     <fragment
         android:id="@+id/monCompteFragment"
@@ -63,6 +66,11 @@
         <action
             android:id="@+id/action_monCompteFragment_to_modifCompteFragment"
             app:destination="@id/modifCompteFragment" />
+        <action
+            android:id="@+id/action_monCompteFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:popUpTo="@id/homeFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/monPanierFragment"
